@@ -1,5 +1,11 @@
 2005-02-02  Jonathan Pryor <jonpryor@vt.edu>
 
+	* UnixFile.cs: Cope with changes in UnixStream.
+	* UnixStream.cs: Change FileDescriptor property to Handle for consistency.
+	* StdioFileStream.cs: Change FileStream property to Handle for consistency.
+
+2005-02-02  Jonathan Pryor <jonpryor@vt.edu>
+
 	* Syscall.cs: Remove public sys_ methods.  Some were public by mistake, and
 	  others so that users could manually marshal strings if desired.  Manually
 	  marshaling strings shouldn't be necessary, though, so remove them too.
